# tup25-p4

./: .gitignore  Notas.md  README.md  README_STREAMLIT_APP.md  TUP-2025.md  agenda.json  alumnos-con-tp.md  alumnos-ver.md  alumnos.md  alumnos_procesado.md  alumnos_temporal.md  bajar.py  bajar_email.py  bajar_fotos.ipynb  bajar_pantalla_email.py  bash.exe.stackdump  catalogo.html  contactos.vcf  convertir.ipynb  convertir_imagen.py  convertir_imagenes.py  correciones.md  credentials.json  directorio_clases.md  docker-compose.yml  formulario-contacto.html  index.html  lista_pr.txt  main.py  package-lock.json  pendientes.md  producto-temp.json  pyproject.toml  reloj.html  repositorio.ipynb  requirements.txt  respuesta-grok.md  respuestas_examen.csv  run_streamlit.sh  temp.json  (+3 more)
clases/22.gpt/: 3.asistente.py  5.herramientas.py  6.gen-ui.py  Ia.md  README.md  pyproject.toml
clases/22.gpt/.streamlit/: secrets.toml
clases/22.gpt/clase-ia/: README.md  pyproject.toml
clases/42.1.ia-py/: 2.charlar-pdf.py  4.consultar-agentdb.py  main.py  pyproject.toml  requirements.txt
clases/42.1.ia-py/.streamlit/: secrets.toml
clases/python/: .gitignore  11.numpy.ipynb  21.2-modelos.ipynb  23.rest.py  23.servidor.http  4-funciones.ipynb  5-clases.ipynb  5.2-clases.ipynb  9.1-pandas.ipynb  9.2.pandas.ipynb  TiposDeDatos.ipynb  agenda.py  contactos.json  funciones.ipynb  login.html  login.py  probar_servidor.http  pyproject.toml  usuarios.py  xx.servidor.py
clases/python/.streamlit/: secret.toml
tp/61028 - Ponce, Rodrigo Exequíel/tp6/backend/: main.py  pyproject.toml  usuarios.py
tp/61028 - Ponce, Rodrigo Exequíel/tp6/backend/auth/: schemas.py  security.py
tp/61028 - Ponce, Rodrigo Exequíel/tp6/backend/models/: __init__.py  carrito.py  compra.py  database.py  models.py  productos.py  usuarios.py
tp/61028 - Ponce, Rodrigo Exequíel/tp6/backend/schemas/: __init__.py  carrito_schema.py  compra_schema.py  producto_schema.py
tp/61028 - Ponce, Rodrigo Exequíel/tp6/backend/services/: __init__.py  carrito_service.py  compra_service.py  producto_service.py
tp/61028 - Ponce, Rodrigo Exequíel/tp6/backend/tests/: test_auth.py  test_carrito.py  test_main.py  test_productos.py
tp/61035 - Ledesma, Paulo Marcelo/tp6/backend/: db.py  init_data.py  main.py  pyproject.toml  schemas.py
tp/61035 - Ledesma, Paulo Marcelo/tp6/backend/models/: __init__.py  carrito.py  compra.py  producto.py  productos.py  usuario.py
tp/61035 - Ledesma, Paulo Marcelo/tp6/backend/routers/: auth.py  carrito.py  compras.py  productos.py
tp/61035 - Ledesma, Paulo Marcelo/tp6/backend/scripts/: inspect_compras.py  reset_stock.py
tp/61120 - Guerrero, Ana Sofía/tp6/backend/: debug_post.py  main.py  models.py  pyproject.toml  requirements.txt  test_api.py  utils.py
tp/61120 - Guerrero, Ana Sofía/tp6/backend/auth/: security.py
tp/61120 - Guerrero, Ana Sofía/tp6/backend/models/: __init__.py  productos.py  usuario.py
tp/61120 - Guerrero, Ana Sofía/tp6/backend/routes/: compras.py  productos.py
tp/61200 - Gauna Serrano, Martín Javier/tp6/backend/: .dockerignore  Dockerfile  README.docker.md  api-tests.http  db.py  docker-compose.yml  e2e_smoke.py  main.py  models_orm.py  productos.json  pyproject.toml  pytest.ini  requirements.txt  schemas.py
tp/61200 - Gauna Serrano, Martín Javier/tp6/backend/models/: README.md  __init__.py  productos.py
tp/61200 - Gauna Serrano, Martín Javier/tp6/backend/tests/: test_api.py
tp/61236 - Drachenberg, Franco Eduardo/tp6/backend/: main.py  pyproject.toml
tp/61236 - Drachenberg, Franco Eduardo/tp6/backend/app/api/: deps.py
tp/61236 - Drachenberg, Franco Eduardo/tp6/backend/app/core/: config.py  security.py
tp/61236 - Drachenberg, Franco Eduardo/tp6/backend/app/db/: init_db.py  session.py
tp/61236 - Drachenberg, Franco Eduardo/tp6/backend/models/: __init__.py  carrito.py  compras.py  productos.py  usuario.py
tp/61240 - Timo, Héctor Gabriel/tp6/backend/: database.py  main.py  pyproject.toml
tp/61240 - Timo, Héctor Gabriel/tp6/backend/auth/: security.py
tp/61240 - Timo, Héctor Gabriel/tp6/backend/models/: models.py
tp/61319 - Carabajal, José Gabriel/tp6/backend/: db.py  main.py  pyproject.toml  stock.json
tp/61319 - Carabajal, José Gabriel/tp6/backend/models/: carrito.py  compras.py  usuarios.py
tp/61319 - Carabajal, José Gabriel/tp6/backend/routers/: auth.py  carrito.py  compras.py
tp/61319 - Carabajal, José Gabriel/tp6/backend/schemas/: auth.py  cart.py  compras.py
tp/61319 - Carabajal, José Gabriel/tp6/backend/security/: auth.py
tp/61319 - Carabajal, José Gabriel/tp6/backend/utils/: products.py
tp/61338 - Morales, Juan Daniel/tp6/backend/: main.py  pyproject.toml
tp/61338 - Morales, Juan Daniel/tp6/backend/models/: __init__.py  productos.py
tp/61445 - Martínez Campero, Santiago/tp6/backend/: README.md  check_stock.py  check_users.py  config.py  database.py  main.py  pyproject.toml  test_carrito.py  utils.py
tp/61445 - Martínez Campero, Santiago/tp6/backend/models/: __init__.py  carrito.py  compras.py  productos.py  usuarios.py
tp/61445 - Martínez Campero, Santiago/tp6/backend/routers/: admin.py  autenticacion.py  carrito.py  compras.py  productos.py
tp/61579 - Gonzalo, Martín/tp6/backend/: api-tests.http  main.py  productos.json  pyproject.toml  security.py
tp/61579 - Gonzalo, Martín/tp6/backend/models/: compras.py  productos.py  usuarios.py
tp/61911 - Llanos, Luciano/tp6/backend/: API_DOCUMENTATION.md  CHECKOUT_PEDIDOS.md  PROYECTO_FINALIZADO.md  README.md  README_FINAL.md  auth.py  carrito_helpers.py  database.py  debug_test.py  debug_tests.py  main.py  pedidos_helpers.py  pruebas.rest  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_api.py
tp/61911 - Llanos, Luciano/tp6/backend/models/: __init__.py  carrito.py  pedidos.py  productos.py  usuarios.py
tp/61911 - Llanos, Luciano/tp6/backend/static/: historial.html  index.html  login.html
tp/62172 - Salcedo, Mariana Aylén/tp6/backend/: auth.py  database.py  main.py  productos.json  pyproject.toml
tp/62172 - Salcedo, Mariana Aylén/tp6/backend/models/: compra.py  usuario.py
(+2971 files in other folders)
