[project]
name = "tup-25-p4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ub>=0.0.10",
    "matplotlib>=3.8.0",
    "pandas>=2.0.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "seaborn>=0.12.0",
]

[tool.uv.workspace]
members = [
    "enunciados/tp5",
]
