[project]
name = "tup-25-p4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ub>=0.0.10",
    "matplotlib>=3.8.0",
    "pandas>=2.0.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "seaborn>=0.12.0",
    "selenium>=4.37.0",
    "webdriver-manager>=4.0.2",
    "requests>=2.32.5",
    "playwright>=1.55.0",
    "aiohttp>=3.13.1",
    "pydantic>=2.12.3",
    "marimo>=0.17.0",
    "watchdog>=6.0.0",
]

[tool.uv.workspace]
members = [
    "enunciados/tp5",
]
