[project]
name = "tup-25-p4"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.3",
    "google-genai>=0.6.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "python-dotenv>=1.0.1",
    "pillow>=11.0.0",
    "scikit-learn>=1.7.2",
]

[tool.uv.workspace]
members = [
    "tp6/backend",
]
