[project]
name = "ia-03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.3",
    "fastmcp>=2.13.0.2",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "sqlmodel>=0.0.27",
    "streamlit>=1.50.0",
]

[tool.uv.workspace]
members = [
    "clase-ia",
]
