[project]
name = "clase-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.3",
    "langchain-text-splitters>=0.2.0",
    "langchain-chroma>=1.0.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.3",
    "langchain-openai>=1.0.2",
    "openai>=2.6.1",
    "pypdf>=6.1.3",
    "streamlit>=1.50.0",
    "tiktoken>=0.12.0",
    "mcp2py>=0.6.0",
    "fastmcp>=2.13.0.2",
]
