[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[all,standard]>=0.119.1",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "pillow>=11.3.0",
    "plotly>=6.3.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.27",
    "st-gsheets-connection>=0.1.0",
    "streamlit>=1.50.0",
    "supabase>=2.22.0",
    "uvicorn>=0.38.0",
]

[tool.uv.workspace]
members = [
    "marimo",
    "24.login",
]
