[project]
# --- Sección Principal de Configuración ---
name = "backend-tp6"
version = "0.1.0"
description = "API para el Trabajo Práctico 6 - E-Commerce"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "sqlmodel>=0.0.14",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "aiofiles>=23.1.0",
    "python-multipart>=0.0.7"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uvicorn]
host = "127.0.0.1"
port = 8000
reload = true

[tool.setuptools]
py_modules = ["main"]
packages = ["models"]